

plugins {
    id 'java-gradle-plugin'
//    id 'com.github.spotbugs' version "5.0.14"
}

group = 'LiveAggregator'
version = '1.0.3-SNAPSHOT'

description = "Real-time data aggregation and viewing"


repositories {
     mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_19
    targetCompatibility = JavaVersion.VERSION_19
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version:'4.13.2'

    implementation group: 'com.sparkjava', name: 'spark-core', version: '2.9.3'
    implementation group: 'ch.qos.logback', name: 'logback-classic', version:'1.2.9'
    implementation group: 'com.google.code.gson', name: 'gson', version:'2.8.9'

//    spotbugs 'com.github.spotbugs:spotbugs:4.7.3'
}

tasks.register('copyDependencies', Copy) {
    dependsOn build
    from configurations.runtimeClasspath
    into new File(".", "libs")
}

//spotbugsMain {
//    reports {
//        html {
//            required = true
//            outputLocation = file("$buildDir/reports/spotbugs/main/spotbugs.html")
//            stylesheet = 'fancy-hist.xsl'
//        }
//    }
//}